# deepfake_detection

./: .gitignore  README.md  download_faceforensics++.py  download_faceforensics.py  metadata_processing.ipynb  pyproject.toml
deepfake_detection/: defaults.py
deepfake_detection/data/: image_dataset.py
deepfake_detection/notebooks/: metadata_processing.ipynb
deepfake_detection/pre_processing/: crop_faces.py  detect_faces.py  extract_frames.py
deepfake_detection/training/: augmentations.py  configurator.py  data_loader.py  test.py  train.py  training_utils.py
deepfake_detection/utils/: defaults.py
notebooks/: calculate_test_metrics.ipynb  create_testing_set.ipynb  explore_data.ipynb  explore_model.ipynb  merge_image_metadata.ipynb  metadata_processing.ipynb  test_ig_filter.ipynb
