[tool.poetry]
name = "deepfake-detection"
version = "0.1.0"
description = ""
authors = ["Faraz Ghasemzadeh <faraz.g2000@gmail.com>"]
readme = "README.md"
packages = [{include = "deepfake_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.24.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
